# ice_proj_419

Max Patch/: Ice.maxproj
Max Patch/Ice/: Ice.maxproj  chords.js
Max Patch/Ice/code/: chords.js
Max Patch/Ice/data/: harm.json
Max Patch/Ice/patchers/: Copia de Ice.maxpat  Ice.maxpat
Max Patch/patchers/: Ice.maxpat
crack_simulator/: Cargo.toml  settings.json  test  test.txt
crack_simulator/src/: main.rs  osc.rs
crack_simulator/src/graphics/: mod.rs  vertex.rs
crack_simulator/src/graphics/polygon/: mod.rs  triangle.rs
crack_simulator/src/graphics/shaders/: bloom_fs.glsl  bloom_vs.glsl  crack_fs.glsl  crack_vs.glsl  screen_fs.glsl
crack_simulator/src/simulation/: edge.rs  graph.rs  mod.rs  node.rs  stress_vec.rs
crack_simulator/src/simulation/graph/: edge.rs  edge_update_list.rs  mod.rs  node.rs  propagation_vector.rs
