[package]
name = "crack_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
glium = "0.32.1"
rosc = "0.9.1"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"